# HAMU

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/accelerate/: default_config.yaml
hamu/: __init__.py  _compat.py
hamu/cli/: __init__.py  train.py
hamu/data/: __init__.py  llm.py  vision.py
hamu/methods/: __init__.py  baselines.py  core.py  hamu.py
hamu/models/: resnet20.py
hamu/training/: __init__.py  callbacks.py  modality.py  trainer.py
scripts/experiments/cifar/: additional_baselines.sh  baseline_unlearn.sh  batch_size_ablation.sh  constraint_sweep.sh  full_grad_ablation.sh  hamu_unlearn.sh  optimizer_ablation.sh  rho_sweep.sh  stopping_criterion.sh  timing.sh  timing_all.sh  train.sh  train_full.sh
scripts/experiments/llm/: additional_baselines.sh  baseline_unlearn_waterdrum_tofu.sh  batch_size_ablation.sh  constraint_sweep.sh  full_grad_ablation.sh  hamu_unlearn_waterdrum_tofu.sh  optimizer_ablation.sh  semantic_similarity_sweep.sh  stopping_criterion.sh  timing_all.sh  train_full_waterdrum_tofu.sh  train_waterdrum_tofu.sh
scripts/launch/: generate_cifar_hamu_jobs.sh  run_jobs.sh
